deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kreutzer
  namespace: kreutzer
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1G
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    "app.kubernetes.io/name": kreutzer
    "app.kubernetes.io/component": portal
spec:
  rules:
    - host: kreutzer.leryn.top
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kreutzer-portal
                port:
                  number: 80
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kreutzer-core
                port:
                  number: 80
